--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <div class="vertical-center">
             <div id="quiz" style="display: none">
                 <div id="question"></div>
-                <!--  <div id="qImg"></div>  -->
                 <div id="choices">
-                    <div class="choice" id="A" onclick="checkAnswer('A')"></div>
-                    <div class="choice" id="B" onclick="checkAnswer('B')"></div>
-                    <div class="choice" id="C" onclick="checkAnswer('C')"></div>
+                    <br>
+                    <div class="btn btn-primary" id="A" onclick="checkAnswer('A')"></div>
+                    <div class="btn btn-primary" id="B" onclick="checkAnswer('B')"></div>
+                    <div class="btn btn-primary" id="C" onclick="checkAnswer('C')"></div>
                 </div>
                 <div id="timer">
                     <div id="counter"></div>
